cargo-desugar/tests/ui/local-type-path.out
error[E0433]: failed to resolve: function `check` is not a crate or module
  --> tests/ui/local-type-path.desugared.rs:16:25
   |
16 |         assert_exists::<check::Inner>();
   |                         ^^^^^ function `check` is not a crate or module

error[E0433]: failed to resolve: function `check` is not a crate or module
  --> tests/ui/local-type-path.desugared.rs:17:26
   |
17 |         assert_exists::<&check::Inner>();
   |                          ^^^^^ function `check` is not a crate or module

error[E0433]: failed to resolve: function `check` is not a crate or module
  --> tests/ui/local-type-path.desugared.rs:18:41
   |
18 |         assert_exists::<std::boxed::Box<check::Inner>>();
   |                                         ^^^^^ function `check` is not a crate or module

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
